# cmake_doctest_integration

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/simplelib/: CMakeLists.txt
lib/simplelib/include/simplelib/: simplelib.h
lib/simplelib/src/: simplelib.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/src/: test_simple_lib.cpp
